# measures

./: .gitignore  Corpus.hs  LICENSE  Main.hs  Measures.cabal  Measures.hs  README.md
Measures/: Corpus.hs
